# ChangeLog for app-backup/obnam
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-backup/obnam/ChangeLog,v 1.18 2014/03/25 21:37:28 mschiff Exp $

*obnam-1.7.2 (25 Mar 2014)

  25 Mar 2014; Marc Schiffbauer <mschiff@gentoo.org> -obnam-1.7.ebuild,
  +obnam-1.7.2.ebuild:
  Bump to 1.7.2. Remove pyyaml dependency.

*obnam-1.7 (16 Mar 2014)

  16 Mar 2014; Marc Schiffbauer <mschiff@gentoo.org> -obnam-1.5.ebuild,
  +obnam-1.7.ebuild:
  Add new, drop oldest version.

*obnam-1.6.1-r1 (04 Dec 2013)

  04 Dec 2013; Marc Schiffbauer <mschiff@gentoo.org>
  +files/obnam-gnupg-ownertrust.patch, +obnam-1.6.1-r1.ebuild,
  -obnam-1.6.1.ebuild, obnam-1.5.ebuild:
  Added patch for >=gnupg-2.0.22. Revbumped 1.6.1. Fixes #488596. Thanks to
  Thomas Eschenbacher and Martin Dummer.

*obnam-1.6.1 (02 Dec 2013)

  02 Dec 2013; Marc Schiffbauer <mschiff@gentoo.org> +obnam-1.6.1.ebuild,
  -obnam-1.4.ebuild:
  Version bump. Drop oldest version.

  09 Aug 2013; Marc Schiffbauer <mschiff@gentoo.org>
  -files/obnam-1.2_diff_fix.patch, -files/obnam-1.2_man_diff_fix.patch:
  Remove old patches

*obnam-1.5 (09 Aug 2013)

  09 Aug 2013; Marc Schiffbauer <mschiff@gentoo.org> +obnam-1.5.ebuild,
  -obnam-1.2-r1.ebuild, -obnam-1.3.ebuild:
  Bump version. Remove older versions

  01 Apr 2013; Patrick Lauer <patrick@gentoo.org> obnam-1.4.ebuild:
  Add python[threads] to dep to avoid build failure

*obnam-1.4 (24 Mar 2013)

  24 Mar 2013; Marc Schiffbauer <mschiff@gentoo.org> +obnam-1.4.ebuild,
  metadata.xml:
  Version bump

  28 Feb 2013; Marc Schiffbauer <mschiff@gentoo.org> obnam-1.3.ebuild:
  Add build workaround for some systems

*obnam-1.3 (18 Dec 2012)

  18 Dec 2012; Marc Schiffbauer <mschiff@gentoo.org> -obnam-1.1.ebuild,
  -obnam-1.2.ebuild, +obnam-1.3.ebuild:
  Version and dependency bump. Drop old versions.

  15 Nov 2012; Marc Schiffbauer <mschiff@gentoo.org> obnam-1.2-r1.ebuild: