@@ -6,13 +6,13 @@ AUX obnam.conf 2366 SHA256 2a609d1243d5ea3e063a413e78421ede02eda5cbbfd984c211f78
 DIST obnam_1.6.1.orig.tar.gz 177104 SHA256 69bca2d17d7b4ebc0f2ca15a4d0777e266aa5214a8de1537ecc35f1cadb42510 SHA512 5223dabae927a91825041d755c0c410c9579c946210653b25a8d84dcf8f3c754d3dd460bb097d88a488bd2fb88c7edc8550d74130841e6caf13113ceefe5fffb WHIRLPOOL 6f1fa2be34bead5f2887b505708c9e1ed05dddd457b59362dd166f5be5ef7302a74746a9bfde17eaee142ebdb8389ef8b73281f936a1e80ea161c9b04dc8c0d1
 DIST obnam_1.7.2.orig.tar.gz 257675 SHA256 f7431e9d7d2aba7e1dfdc831f796177fb8944725f77c0c2a5558d6ef7733a17c SHA512 f05ca3bc8b8acabf0592353e0e95c742af7e7544e6d91236c54c1f74adb290d969d9afb16d2951c1f522e75e42c7044f30c4932391d29f0f3efb6be2999909f7 WHIRLPOOL 3b891afdc3fd70a96d82e1a84b8b92a68cce5a1410b725444e0c3796a21f6afbc1216d0ea18e0e8ff55e5a6bdee901b2856c5e8c4ac68f7f238a2a98a6600512
 EBUILD obnam-1.6.1-r1.ebuild 1392 SHA256 185f0f763f7445a5ca8a724c7fcb14da3ea9c4c2a35464b213bf6c06fa649bb5 SHA512 77eccbb4e8c9ca18e6b9bf672858e30a7793c4c922ff8f19e8e956fe30245c3a55936fec0c9be3ce0f881f35e6f7bc2bbb61b0d419b801e24509f88b9710d36d WHIRLPOOL e9a17052f924e754314557d5515ece06a72db683dc4d869e97639e5e5cd4545b5620ee0c9dff81be63ac00d5db37ff00ea62e71dcc8a8ec33b546c7d2cef3525
-EBUILD obnam-1.7.2.ebuild 1288 SHA256 b92a9ad41b9d08de22d712a8c51085114e8578a4a469145c9f0339f63c47acb1 SHA512 fc126f36fc8088bc9a7de8f5c9413e05d081695ae8cedbac677ca8ebedb9a8b4ea6e8cd53c40366897b37f5fdd11222f1c11f06971a257b18f96a253ceed7e3a WHIRLPOOL 9091761c5bf51d3a9ac6ed12de762d14d5d7270dd0576e58f0f51420fc52c6c92676112a3812fe034584edca1c84bc51f6c9d30291d263f5d7c804e2e9135ff7
-MISC ChangeLog 3262 SHA256 0cef5a561447b35ee5a58d9b2daa3e46a0a8ad7e35be1957a95178baa0d91555 SHA512 c6d0d3f518df4d412e09440775766b2dd6d30f283f4632761a4cb4be74a27d307da038bbd9eef3d08ca438d1de2b3afb61616346199d2d9153cbca728bcba107 WHIRLPOOL 64d1d54c3f8d3df51b9e8086d6fcd9b48ebc757428bb31731e4b517149a5c26697b945970595b0f2dd2e5ac36d4efc63c61833a207daddc94ddbf43b6163365f
+EBUILD obnam-1.7.2.ebuild 1294 SHA256 ea47f42eb989425cc69b0b020f1a269ed27ea097c5e9bdb022764a565f851f6a SHA512 4f2176fe641010fb8ad8c055471bd8399e2d4409496e93c03d5c6818eed33659b6465fbaed1e76d9a37df98e6b206a45994297be36e8f6d3c3da20d939c31d5f WHIRLPOOL f2199666e84e1c04566bd2e43e0a029de9cdbcfd8fd240c98210de390ddb00dcefdd07810de42facfbcec62c0ae6daf9d73957364426c40359b02ec479a994d8
+MISC ChangeLog 3392 SHA256 4836c51b1b9d0dad1d1d9080561272b6dbf37e1338e7fe6142b03b3b91bb6314 SHA512 5eb3bd8691215c62f997abc463b2f5bea84d9b5e64b78d8a0f49139f4506450216a7adf5c2f059fedc1d4321ff0902049078b9d06d4e5a6fa637e039be815665 WHIRLPOOL 25eafba3198e5abfc7d948ebea3891c17a42a2fb1eb3a8403cb334a5d7b3365ec4585efb04ce29024c03d8e81a064493811a5acce09d97f2f473326d8b45b895
 MISC metadata.xml 236 SHA256 f55443c9b3d97fcc9437b9aeba1b3beae39e38599620bd520d0693bb8948b531 SHA512 842ec0962624e280c2c3909e6da541cdaf35532f0f00d76cc9ca0e03dfb8c3dc83a426ae370bc37d73d0c4b1fdd4983171a0586220546b967afe3a3f5dd78ce4 WHIRLPOOL 8ee0a6397a1bae24973eba9b31e1ac64bac9726ca45e5f2127a3ffc991627479030060c605c7cf0957891c184f5e5d01fb2387f94c3a68693c988e4a180c7260
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iD8DBQFTMfccKWxsyjWmQTQRCNyvAJ0WoU7Bo2FLUjzQZT9Chf1CFIGY4QCgghCw
-HkLqAeDNPPfcd8wROnWLQOk=
-=iubc
+iD8DBQFTNdprKWxsyjWmQTQRCM3+AJ48BnbYU4Ts4ryk/18gso7LYg0GvACfSb26
+Bh9dDjJ1C1iE323duF8zHeY=
+=8Dmc
 -----END PGP SIGNATURE-----
