@@ -1,14 +1,14 @@
 DEFINED_PHASES=compile configure install postinst prepare test
-DEPEND=python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6[threads] ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[threads] ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] dev-python/cliapp dev-python/larch dev-python/paramiko dev-python/tracing dev-python/ttystatus userland_GNU? ( >=sys-apps/coreutils-8.5 ) python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6[threads] ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[threads] ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)]
+DEPEND=python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6[threads] ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[threads] ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] dev-python/cliapp dev-python/larch <dev-python/paramiko-1.13 dev-python/tracing dev-python/ttystatus userland_GNU? ( >=sys-apps/coreutils-8.5 ) python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6[threads] ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[threads] ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)]
 DESCRIPTION=A backup program that supports encryption and deduplication
 EAPI=5
 HOMEPAGE=http://liw.fi/obnam/
 IUSE=python_targets_python2_6 python_targets_python2_7
 KEYWORDS=~amd64 ~x86
 LICENSE=GPL-3
-RDEPEND=python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6[threads] ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[threads] ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] dev-python/cliapp dev-python/larch dev-python/paramiko dev-python/tracing dev-python/ttystatus python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6[threads] ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[threads] ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)]
+RDEPEND=python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6[threads] ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[threads] ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] dev-python/cliapp dev-python/larch <dev-python/paramiko-1.13 dev-python/tracing dev-python/ttystatus python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6[threads] ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[threads] ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)]
 REQUIRED_USE=|| ( python_targets_python2_6 python_targets_python2_7 )
 SLOT=0
 SRC_URI=http://code.liw.fi/debian/pool/main/o/obnam/obnam_1.7.2.orig.tar.gz
 _eclasses_=distutils-r1	364122897f9dc771167ee5ff362e54e1	eutils	af81d52c25ec93fbdff71e0efb0de7b7	multibuild	56d4120419072116417e8de1bd1040ff	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	python-r1	3bb814ab7959a36067101a6bef683b6f	python-utils-r1	18d8279a3382bf4453e7ff35208ce907	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=7178dfc6ce04f29dcfd7ddfa7168d2d1
+_md5_=38f2b46ae6c758b171716a57ba9e04ea
