@@ -11,15 +11,15 @@ DIST eudev-1.4.tar.gz 1712371 SHA256 66da90fdd228444b7ac1868d36f1c0fe52476b966e7
 DIST eudev-1.5.3.tar.gz 1724415 SHA256 8e4362979572719562f600bfd7decd42d4e21506db5483e3d2e88f725396c57b SHA512 c00f34d76d76ebd5c2862310a2ba3d7bf2f8d348a96e0120ed02aa9014857df736e3a2280a4478e50f2537cabc9082b8f5f5e57ef7b3cf925fae6dc3a4688ddb WHIRLPOOL b3fc943f6c3eaeba92aed72dee417738a840f4176182e08f7564a1fd34baa3cf2a52787ac8e936f74f6c13b7896eb929a2f83cf087b8b09e5b8c7d7858471dd5
 EBUILD eudev-1.3.ebuild 7914 SHA256 f57d07aba9f1a7bc84a0b76ac688761ceb2632c4b930d3fb98d808e121efeeec SHA512 865c91af87f2b3c91c0963a5c6bc1da6f6b9b3e519b5dea6a3170fe5f4d4f5dc44a5c84d19f05383f802a91dc249c65650c2051014d73fe86c7eedcc7b9695da WHIRLPOOL ac0c66c725665c4958f1ec34602f4ecc347cc5130d4ec3640b5098e3ffa28c44f72fa359a507e7b7a292b71901bbf0ca3dcb01b2aef491d2e76daec51b192219
 EBUILD eudev-1.4-r1.ebuild 7926 SHA256 dc5527b9ec52225551440eecb22951a4297b234c3b9e0903697f3c142773d8ec SHA512 797ff003314fd1c7488443f8207bae905ba92f0220fa470f23abf0dac50324935e855df9cc384d27aaf420cf69b59c64b0fff36bd6c42b2f4c164fc4780cad57 WHIRLPOOL e112de4793a9fe7084df9f10ab2084466bbbd13c7493ddfc2d2b802b0bbf5853fb176c7ba9e727b4b55c91dd5809096b9de6611c68d8b7fc87811bdd6e0d7da1
-EBUILD eudev-1.5.3-r1.ebuild 8091 SHA256 35e64218d3275566babc71f170aa84e5c86298ece815ba179e039cf0b3ac9f07 SHA512 7f872d0eb0e3f1a383435c7ef4dd34db56aad4353e19866c6c0c7047f946e371b37b8a9b356b1f99efe2d17c1344a8347499eda5e34ef648266e9bdb637e48d2 WHIRLPOOL 80063625997b052e585de8345d671b5e623b1c2448cba30e3018635c647c96333dbab8d1d2d940070d01d5970371dce2df3ff9a379ca5d2904382069c8e0e882
+EBUILD eudev-1.5.3-r1.ebuild 8117 SHA256 7a850b74fb6f2888f0da5b33b8e9037f66edf627e48ee6dfb217830b8150c3d0 SHA512 f3e072c32a92c6d4d12cb845a63f94418fa362fe1e010d503f2a006220c1be5e55b0ec93e713f22c770bdfd859cf25a916b90ccb129433bfed07e59837e481f2 WHIRLPOOL 342281bf952fd8587601234a7737510585f9720779f0facd05ea39653f88fc2b13215a849047e60e95ab741315edb0e3d62feca0db1c86968483c5057c256f3f
 EBUILD eudev-1.5.3.ebuild 7925 SHA256 1815a64d8c7423e1b55bc1d4ed86f1c8d3c7e043370d567d19380b1af19d3d0a SHA512 c6c9bb9beab7a24b5e1ae6409fa4d4c355efade9d3964761f7a65aeac40b913996e32f644b68ab2d254ce7980f17304392595f6864647ce33f9f3f35d48a63fc WHIRLPOOL f2ef7d595214dc2de2408631602696e7a098e5d05d2f5f6286cce0140077829ad67b40cf806f46d263cb5bbc830d8d4f70ff6261934075e4fb3dd5ebb63b2bec
-EBUILD eudev-9999.ebuild 8088 SHA256 053aae282e8e903a86415d89ffc552e424acc9dfb614d89a8e3e8c2c8cad7bce SHA512 df64612a05c6b23a643e3035459bfec44074a8d3e6dfd69ccef0e5c2ea0817334451f9131d116c3653438719f20739d76fc344cd60b59cc36b66a39ce94b24fa WHIRLPOOL e6ffcdd2b22bbc1fe0b026f864d700015dd60694337d00ab7160fb55463ce52b558bf91d2aad8e249036b3c4a2eb0cc8b7936c830275c16cf9d991bcef4a67ef
-MISC ChangeLog 15021 SHA256 b63bca881ed73307f584b82c66eee85d7031e4edc0b1f507a83899690e47c562 SHA512 26bd8440ccbac3aefc9661e79154475e0e7ab092079eedbd20d4cfda499f5aaa3c89f49183d7604fab870264de37ef565467cfbe43303991848171ff10947287 WHIRLPOOL 9c9a4fbc0b0ba8ae9eae43f7dfaba31da6e046acbca8357dca9e117452a92a7043b1240ea4e52d7f12f408b727eb7d19817d5d2c3c1b161816e08f26f29453a4
+EBUILD eudev-9999.ebuild 8114 SHA256 90a7e07a53e64861e7c72c93153d32d07e47573d9e979c4431d1c71a3ee02768 SHA512 aa616bd4cb7605e426991250fc0e959eec48c56778b67bc386583626af8bae00833f75ac69f69988ad39fbfa3f68d952784537764ef93b44d94caa778d07ce6b WHIRLPOOL 89f5d99ee690b101070e2b3d1a834aa309b1e7ef9e206b1bb2e817ed13c1548d020b0b4cf29563d87dd88a08cc66d16c59c5e7c6193ddaf900114feb83390e3a
+MISC ChangeLog 15213 SHA256 f4832702272f10fd86f22afd5dfe758e5a944067fb33090948d780673d375794 SHA512 f9517ca43ab3aae80d51086d44f148dbc8612d31384b2c6ad38306ee746f0b5ec1b567a88831b2275d86c06ad7b3bd75845f36a10a4e30aa9deceb36641b3f46 WHIRLPOOL 80f1bc0810b9540287223d7b8404c7c5df3f00d380ee777e011461ceb7f16677623c782b85429392727dd2a912f5ce13ea7db4b9d03d0d20218b1bb3bcaec344
 MISC metadata.xml 978 SHA256 273446e57cfba7f612e72c3dcc2e1b93ac0003f878c504aa72daa762f2cdbba5 SHA512 244dc230cf7123afef2c4c0f0caa418bbc621f3da0e6303f7cecfb4f3cc53290fcf0adddf2d176ff208991a5bb27801c5c9f6ad5ea3bada513f7ebb22d02d06a WHIRLPOOL e39a5caec32bcd404eb2fdb54e3abff5631f7115786d039a6f2f04a8503e445f971a993dedd0564022e148133e2f15c4579b3cc664ffd393003a858ac77166c5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlM1yFMACgkQ2ugaI38ACPDJbQD9H6340kHnBqfwlepGQVsoLpDC
-AVldgr7m3ZQ5GmcNNG4A/1HljmiWeNCrXq2I02mOHIyJUrZl4muEcwzLluFejjJL
-=i1ct
+iF4EAREIAAYFAlM11VAACgkQ2ugaI38ACPBzBAEAgsuJd7XMzKpLimjVVkNFwMXa
+VxOH48aNjFx8aQSvOPkA/jni8fkP3PzRVY7g9JM1UHZmF6xcYAsOPJIoVxvBaaXI
+=vLiE
 -----END PGP SIGNATURE-----
