@@ -1,6 +1,11 @@
 # ChangeLog for sys-fs/eudev
 # Copyright 1999- Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/eudev/ChangeLog,v 1.98 2014/03/28 19:06:38 axs Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/eudev/ChangeLog,v 1.99 2014/03/28 20:02:03 axs Exp $
+
+  28 Mar 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org> eudev-1.5.3-r1.ebuild,
+  eudev-9999.ebuild:
+  alternate ABI build of libgudev needs to honour USE=gudev or it will fail, bug
+  506104
 
   28 Mar 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org> eudev-1.5.3-r1.ebuild,
   eudev-9999.ebuild:
