@@ -1,6 +1,9 @@
 # ChangeLog for app-backup/obnam
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-backup/obnam/ChangeLog,v 1.18 2014/03/25 21:37:28 mschiff Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-backup/obnam/ChangeLog,v 1.19 2014/03/28 20:24:09 mschiff Exp $
+
+  28 Mar 2014; Marc Schiffbauer <mschiff@gentoo.org> obnam-1.7.2.ebuild:
+  Update paramiko dependency to specify working version
 
 *obnam-1.7.2 (25 Mar 2014)
 
